# dotfiles

./: .gitconfig.jinja  .gitignore  .zshrc  LICENSE  README.md  config.yaml  template.env
.config/: kdeglobals  kglobalshortcutsrc  khotkeysrc
.config/ags/: config.js  package.json  tsconfig.json
.config/ags.sway/: config.js
.config/alacritty/: alacritty.yml
.config/anyrun/: config.ron  dictionary.ron  kidex.ron  niri-focus.ron  shell.ron  style.css
.config/arnndn-models/: README.md  std.rnnn
.config/atuin/: config.toml
.config/bottom/: bottom.toml
.config/bspwm/: bspwmrc.dotdropbak
.config/btop/: btop.conf
.config/cava/: cava.sh  config
.config/dunst/: dunstrc
.config/erdtree/: .erdtreerc
.config/felix/: config.yaml
.config/fish/: .gitignore  config.fish  config.fish.jinja  fish_plugins  fish_variables  fish_variables.jinja  test
.config/ghostty/: config
.config/gnome-extensions-configuration/: configuracion-extensiones-gnome.dconf
.config/gopass/: config
.config/helix/: config.toml  languages.toml
.config/himalaya/: config.toml##template.default  config.toml.jinja
.config/htop/: htoprc
.config/hypr/: hyprland.conf  hyprpaper.conf  init.sh  keybinds.conf  window-rules.conf
.config/i3/: config  i3status-rust-bar-2.toml  i3status-rust.toml  i3status-rust.toml.bak  i3status-rust.toml.video  picom.conf
.config/ignors/: ignors.toml
.config/kitty/: diff.conf  fonts.conf  ui.conf  (+4 more)
.config/sway/scripts/i3/: pyproject.toml
.config/sway/scripts/i3/i3/: autotiling.py  inactive-windows-transparency.py
dotfiles/: bashrc  face  zshrc
(+641 files in other folders)
