[tool.poetry]
name = "i3"
version = "0.1.0"
description = ""
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
i3ipc = "^2.2.1"
tendo = "^0.3.0"
plumbum = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
